# qev

./: DELETE_ME  README
src/: Makefile  Makefile.in  Makefile.orig  README  bam_coverage.c  bam_coverage.h  bqev.c  bqmake.sh  configure.in  coverage.pl  fgetopt.c  fragment_coverage.c  fragment_coverage.h  model.c  model.h  multinomial.c  multinomial.h  mymake.sh  mymakestqev.sh  mytestmake.sh  num_routines.c  num_routines.h  qev.c  query_qev_log_file.bash  run-batch-qev.sh  run-test.sh  simulate.pl  sqev.c  sqmake.sh  stqev.c  test_scan_stat.c
