#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([QEV], [1.0.0], [jac@ncgr.org])
AC_CONFIG_SRCDIR([qev.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.
AC_CHECK_LIB([bam], [samopen])
AC_CHECK_LIB([gsl], [gsl_cdf_poisson_P],[],[
echo "No Gnu Scientific Libraries in standard location please use --with-gsl=/path/to/your/gsl/libraries/"
exit -1])
AC_CHECK_LIB([gslcblas], [main])
AC_CHECK_LIB([m], [exp])
AC_CHECK_LIB([z], [main])

# Checks for header files.
AC_CHECK_HEADERS([string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor memset pow sqrt strchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
